Code with me - changed Controller class